crates/pg_syntax/tests/snapshots/postgres_regress/json@198.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '[{\"b\": \"c\"}, {\"b\": \"cc\"}]'::json #>> array['z','b'];"
---
SelectStmt@0..60
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..58
    AExpr@7..58
      TypeCast@7..40
        AConst@7..34
          Sconst@7..34 "'[{\"b\": \"c\"}, {\"b\": \" ..."
        Typecast@34..36 "::"
        TypeName@36..40
          Ident@36..40 "json"
      Whitespace@40..41 " "
      Op@41..44 "#>>"
      Whitespace@44..45 " "
      AArrayExpr@45..58
        Array@45..50 "array"
        Ascii91@50..51 "["
        AConst@51..54
          Sconst@51..54 "'z'"
        Ascii44@54..55 ","
        AConst@55..58
          Sconst@55..58 "'b'"
  Ascii93@58..59 "]"
  Ascii59@59..60 ";"

