crates/pg_syntax/tests/snapshots/postgres_regress/json@200.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '\"foo\"'::json #>> array['z'];"
---
SelectStmt@0..36
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..34
    AExpr@7..34
      TypeCast@7..20
        AConst@7..14
          Sconst@7..14 "'\"foo\"'"
        Typecast@14..16 "::"
        TypeName@16..20
          Ident@16..20 "json"
      Whitespace@20..21 " "
      Op@21..24 "#>>"
      Whitespace@24..25 " "
      AArrayExpr@25..34
        Array@25..30 "array"
        Ascii91@30..31 "["
        AConst@31..34
          Sconst@31..34 "'z'"
  Ascii93@34..35 "]"
  Ascii59@35..36 ";"

