crates/pg_syntax/tests/snapshots/postgres_regress/json@201.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '42'::json #>> array['f2'];"
---
SelectStmt@0..34
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..32
    AExpr@7..32
      TypeCast@7..17
        AConst@7..11
          Sconst@7..11 "'42'"
        Typecast@11..13 "::"
        TypeName@13..17
          Ident@13..17 "json"
      Whitespace@17..18 " "
      Op@18..21 "#>>"
      Whitespace@21..22 " "
      AArrayExpr@22..32
        Array@22..27 "array"
        Ascii91@27..28 "["
        AConst@28..32
          Sconst@28..32 "'f2'"
  Ascii93@32..33 "]"
  Ascii59@33..34 ";"

