crates/pg_syntax/tests/snapshots/postgres_regress/json@205.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select json_array_elements_text('[1,true,[1,[2,3]],null,{\"f1\":1,\"f2\":[7,8,9]},false,\"stringy\"]');"
---
SelectStmt@0..97
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..95
    FuncCall@7..95
      Ident@7..31 "json_array_elements_text"
      Ascii40@31..32 "("
      AConst@32..95
        Sconst@32..95 "'[1,true,[1,[2,3]],nu ..."
  Ascii41@95..96 ")"
  Ascii59@96..97 ";"

