crates/pg_syntax/tests/snapshots/postgres_regress/json@211.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create type j_unordered_pair as (x int, y int);"
---
CompositeTypeStmt@0..47
  Create@0..6 "create"
  Whitespace@6..7 " "
  TypeP@7..11 "type"
  Whitespace@11..12 " "
  RangeVar@12..28
    Ident@12..28 "j_unordered_pair"
  Whitespace@28..29 " "
  As@29..31 "as"
  Whitespace@31..32 " "
  Ascii40@32..33 "("
  ColumnDef@33..38
    Ident@33..34 "x"
    Whitespace@34..35 " "
    TypeName@35..38
      IntP@35..38 "int"
  Ascii44@38..39 ","
  Whitespace@39..40 " "
  ColumnDef@40..45
    Ident@40..41 "y"
    Whitespace@41..42 " "
    TypeName@42..45
      IntP@42..45 "int"
  Ascii41@45..46 ")"
  Ascii59@46..47 ";"

